<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marcin.projectv1.Find">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/findTopic"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView22"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="22dp"
        android:text="@string/quality"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView23"
        android:layout_alignStart="@+id/textView23"
        android:layout_below="@+id/textView23"
        android:layout_marginTop="23dp"
        android:text="@string/report"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView24"
        android:layout_alignStart="@+id/textView24"
        android:layout_below="@+id/textView24"
        android:layout_marginTop="23dp"
        android:text="@string/promptness"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView25"
        android:layout_alignStart="@+id/textView25"
        android:layout_below="@+id/textView25"
        android:layout_marginTop="23dp"
        android:text="@string/complaint"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView26"
        android:layout_alignStart="@+id/textView26"
        android:layout_below="@+id/textView26"
        android:layout_marginTop="24dp"
        android:text="@string/currentCooperation"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView27"
        android:layout_alignStart="@+id/textView27"
        android:layout_below="@+id/textView27"
        android:layout_marginTop="18dp"
        android:text="@string/contact"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView28"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/findN"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView28"
        android:layout_alignStart="@+id/textView28"
        android:layout_below="@+id/textView29"
        android:layout_marginTop="26dp"
        android:text="@string/nick"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView23"
        android:layout_alignBottom="@+id/textView23"
        android:layout_alignEnd="@+id/textView29"
        android:layout_alignRight="@+id/textView29"
        android:width="50dp"
        android:height="18dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView24"
        android:layout_alignBottom="@+id/textView24"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:width="50dp"
        android:height="18dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView29"
        android:layout_alignRight="@+id/textView29"
        android:layout_below="@+id/editText4"
        android:width="50dp"
        android:ems="10"
        android:inputType="number"
        android:maxHeight="18dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView29"
        android:layout_alignRight="@+id/textView29"
        android:layout_below="@+id/editText5"
        android:width="50dp"
        android:height="18dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView29"
        android:layout_alignRight="@+id/textView29"
        android:layout_below="@+id/editText6"
        android:width="50dp"
        android:height="18dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText13"
        android:layout_alignRight="@+id/editText13"
        android:layout_below="@+id/textView27"
        android:width="50dp"
        android:height="18dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView30"
        android:layout_alignBottom="@+id/textView30"
        android:layout_alignEnd="@+id/textView29"
        android:layout_alignRight="@+id/textView29"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nullText" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView23"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView23"
        android:text="@string/find" />
</RelativeLayout>
